60-k8s/k8s-learning/linux/04-jenkins/01-jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: infra
  labels:
    name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jenkins
  template:
    metadata:
      labels:
        app: jenkins
        name: jenkins
    spec:
      volumes:
        - name: data
          nfs:
            server: hdss7-200
            path: /data/nfs-volume/jenkins_home
        - name: docker
          hostPath:
            path: /var/run/docker.sock
            type: ''
      containers:
        - name: jenkins
          image: yudady/jenkins:lts-jdk11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/jenkins_home
            - name: docker
              mountPath: /var/run/docker.sock
#      imagePullSecrets:
#        - name: harbor
      securityContext:
        runAsUser: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 7
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infra
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: jenkins

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: infra
spec:
  rules:
    - host: "jenkins.od.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
